[package]
name = "stm32l0x3"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.stm32l0]
features = ["stm32l0x3"]


[build]
target = "thumbv6-none-eabi"
panic = "abort"
